# call-stats

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
call-stats/: __init__.py
call-stats/scripts/: __init__.py  call_stats.py
call_stats/: __init__.py  args_parser.py  generate_stats.py
call_stats/scripts/: call_stats.py
call_stats/stats/: all_incoming_calls.py
