[tool.poetry]
name = "call-stats"
version = "0.1.0"
description = "Call STATS"
authors = ["ikievite <ikievite@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"
pytest = "^6.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
gendiff = "call-stats.scripts.call-stats:main"
