[tool.poetry]
name = "call_stats"
version = "0.1.0"
description = "Call STATS"
authors = ["ikievite <ikievite@gmail.com>"]
packages = [
  { include = "call_stats" },
]


[tool.poetry.dependencies]
python = "^3.8"
keyring = "^21.7.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"
pytest = "^6.2.1"

[tool.poetry.scripts]
call_stats = "call_stats.scripts.call_stats:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

